; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_smp.c_smp_rendezvous.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_smp.c_smp_rendezvous.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@all_cpus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @smp_rendezvous(void (i8*)* %0, void (i8*)* %1, void (i8*)* %2, i8* %3) #0 {
  %5 = alloca void (i8*)*, align 8
  %6 = alloca void (i8*)*, align 8
  %7 = alloca void (i8*)*, align 8
  %8 = alloca i8*, align 8
  store void (i8*)* %0, void (i8*)** %5, align 8
  store void (i8*)* %1, void (i8*)** %6, align 8
  store void (i8*)* %2, void (i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @all_cpus, align 4
  %10 = load void (i8*)*, void (i8*)** %5, align 8
  %11 = load void (i8*)*, void (i8*)** %6, align 8
  %12 = load void (i8*)*, void (i8*)** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @smp_rendezvous_cpus(i32 %9, void (i8*)* %10, void (i8*)* %11, void (i8*)* %12, i8* %13)
  ret void
}

declare dso_local i32 @smp_rendezvous_cpus(i32, void (i8*)*, void (i8*)*, void (i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
